VIEW LAYER'S keygramed".use" property does not refresh sometimes while rendering (both F12 and ctrl+F12) #66378

Closed
opened 2019-07-03 15:04:34 +02:00 by Marko Radosavljevic · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 08:05, hash: 10b694877b
Worked: (optional)

Short description of error
WHEN VIEW LAYER'S .use IS KEYFRAMED, THERE IS NO PROPER REFRESH BEFORE THE RENDERING, SO VIEW LAYERS WHICH MIGHT BE ANIMATED TO BE OFF COULD RENDER
view_layers["name_of_layer]"].use

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 08:05, hash: `10b694877b` Worked: (optional) **Short description of error** WHEN VIEW LAYER'S .use IS KEYFRAMED, THERE IS NO PROPER REFRESH BEFORE THE RENDERING, SO VIEW LAYERS WHICH MIGHT BE ANIMATED TO BE OFF COULD RENDER view_layers["name_of_layer]"].use **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]

Added subscriber: @MarkoRadosavljevic

Added subscriber: @MarkoRadosavljevic

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Please follow our submission template and guidelines to make a valid bug report.
We require a .blend file and steps to reproduce the problem.

Please follow our submission template and guidelines to make a valid bug report. We require a .blend file and steps to reproduce the problem.

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2019-07-23 17:35:28 +02:00

And please do not write in ALL CAPS!!!

More than a week without reply or activity. Due to the policy of the tracker archiving for until required info/data are provided.

And please do not write in ALL CAPS!!! More than a week without reply or activity. Due to the policy of the tracker archiving for until required info/data are provided.

Sorry for the caps, first time reporting a bug :)
Video in the link below, blend file attached, RC2 version
viewLayersUse.blend
(In a complex scene, sometimes different layers are rendered, difficult to attach such a file, but in general refresh is the issue which is clear in this simple example)
https://youtu.be/1Ny4AC1tpMQ

Sorry for the caps, first time reporting a bug :) Video in the link below, blend file attached, RC2 version [viewLayersUse.blend](https://archive.blender.org/developer/F7625022/viewLayersUse.blend) (In a complex scene, sometimes different layers are rendered, difficult to attach such a file, but in general refresh is the issue which is clear in this simple example) https://youtu.be/1Ny4AC1tpMQ

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Bastien Montagne removed their assignment 2019-07-23 19:51:12 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Thanks for the file.

@Sergey maybe there is a missing depsgraph update here? But also, that file disables all renderlayers at the same time, which means render could not happen, I guess then it keeps last enabled layer instead?

Thanks for the file. @Sergey maybe there is a missing depsgraph update here? But also, that file disables all renderlayers at the same time, which means render could not happen, I guess then it keeps last enabled layer instead?

In #66378#732632, @mont29 wrote:

"that file disables all renderlayers at the same time"
If I might point out that there is always one render layer enabled while the other is disabled (no two layers enabled or disabled at the same time, but alternating) Refresh and therefore ability to render is sometimes broken, so I think that is the reason of confusion - see 49 second video, first time render is not working and second time after clicking on the timeline it renders fine, while no options are changed: https://youtu.be/1Ny4AC1tpMQ )

> In #66378#732632, @mont29 wrote: "that file disables all renderlayers at the same time" If I might point out that there is always one render layer enabled while the other is disabled (no two layers enabled or disabled at the same time, but alternating) Refresh and therefore ability to render is sometimes broken, so I think that is the reason of confusion - see 49 second video, first time render is not working and second time after clicking on the timeline it renders fine, while no options are changed: https://youtu.be/1Ny4AC1tpMQ )

Ah you are right, sorry… So the active view layer (in the scene) updates as expected, but the inactive one doesn’t…

Ah you are right, sorry… So the active view layer (in the scene) updates as expected, but the inactive one doesn’t…

This issue was referenced by 1693a5efe9

This issue was referenced by 1693a5efe91999b60b3dc0bdff727473b3bd00bb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2019-07-26 10:32:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66378
No description provided.